fix: add margin-top to login-signup-section for better spacing

--- a/css/auth-mobile.css
+++ b/css/auth-mobile.css
@@ -57,6 +57,7 @@
   .login-signup-section {
     width: 270px;
     padding: 32px 16px;
+    margin-top: 32px;
   }
 
   .welcome-section {
